# VALERI

./: .gitignore  CLAUDE.md  README.md  architecture.md  data-model.md  frontend-spec.md  ui-design.md
apps/api/: Dockerfile  alembic.ini  build_ext.py  docker-entrypoint.sh  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_create_schemas.py  0002_core_graph.py  0003_staging_and_invoice_external_no.py  0004_derived_metrics.py  0005_detection.py  0006_tasks.py  0007_ai_log.py  0008_report_approvals.py  0009_app_user.py  0010_conversation_tools.py  0011_selfconfig.py  0012_auditor_config.py  (+13 more)
apps/api/tests/: conftest.py  fakes.py  graph_helpers.py  test_activity.py  test_admin_llm_api.py  test_admin_metrics.py  test_approvals.py  test_auditor.py  test_auth.py  test_behavioral_twin.py  test_capabilities.py  test_capability_a.py  test_chat.py  test_chat_capture_latency.py  test_customers_articles_api.py  test_dashboard.py  test_domain_models.py  test_expectations.py  test_forecast.py  test_get_client_knowledge.py  test_group_risk.py  test_hardening.py  test_health.py  test_inbox.py  test_ingest.py  test_investigation.py  test_kb_api.py  test_kb_capture.py  test_kb_clarification.py  test_kb_extraction.py  test_kb_extraction_contract.py  test_kb_graph_api.py  test_kb_graph_seed.py  test_kb_merge.py  test_kb_resolution.py  test_kb_service.py  test_llm.py  test_llm_answer_cache.py  test_llm_batch.py  test_llm_budget_alerts.py  (+21 more)
apps/api/valeri_api/: config.py  db.py  logging_config.py  main.py  middleware.py  models_registry.py  worker.py
(+399 files in other folders)
